Fixed the search sidenav bleeding over into the search results
Closes #11

--- a/apps/web/src/app/searching/searching.component.sass
+++ b/apps/web/src/app/searching/searching.component.sass
@@ -31,3 +31,6 @@
             transform: scale(1.75)
         &:active
             transform: scale(1.5)
+
+::ng-deep .mat-drawer-inner-container
+    overflow-y: hidden !important
